--- a/MCS_K8sEdge_Bernd_KLAUS.tex
+++ b/MCS_K8sEdge_Bernd_KLAUS.tex
@@ -100,7 +100,7 @@
 \place{Vienna}
 
 \kurzfassung{
-Kubernetes wird als Schweizer Armemesser der Container-Orchestrierung bezeichnet. Auch im Bereich edge-computing bietet der Dienst eine Vielzahl an unterschiedlichen Werkzeugen und Tools an, welche Teils unterschiedliche Strategien und Ansätze verfolgen. Die Auswahl reicht von einem zentralen Kubernetes-Cluster der verteilte Geräte, sogenannte „Leafs“, steuert bis hin zu vielen einzelnen und verteilten kleinen Clustern an der Edge, welche zentral gesteuert werden. Entscheidend ist es den richtigen Anwendungsfall zu erheben, um sich für die optimale Lösung entscheiden zu können. Ebenfalls spielen sicherheitstechnische Aspekte bei derart komplexen Umgebungen eine wichtige Rolle. Die vorliegende Arbeit gibt Einblicke und Entscheidungsgrundlagen sowie Empfehlungen hinsichtlich der IT-Security. Belegt werden die Angaben durch Implementierung eines Proof-of-Concepts
+Kubernetes wird als Schweizer Armemesser der Container-Orchestrierung bezeichnet. Auch im Bereich edge-computing bietet der Dienst eine Vielzahl an unterschiedlichen Werkzeugen und Tools an, welche Teils unterschiedliche Strategien und Ansätze verfolgen. Zum einen ist der Einsatz einer herkömmlichen Kubernetes Architektur möglich, zum anderen können jedoch auch verteilte und unabhängig agierende Kubernetes Cluster betrieben werden. Die richtige Architektur für einen individuelles Einsatzgebiet zu wählen ist eine herausfordernte Entscheidung. Als Ziel dieser Arbeit ist es genau diese Frage zu beantworten. Dazu werden die beiden Vairanten in Form eines Proof-of-Concepts unter Einsatz der "Design Science Research" Methode aufgebaut und untersucht. Die daraus gewonnen Daten bilden die Basis eines nachhaltigen Vergleichs der beiden Möglichkeiten. Als Produkt entsteht daraus ein Kriterienkatalog der für die Entscheidungsfindung herangezogen werden kann. Die Daten zeigen, dass je nach Anwendungsfall Vor- und auch Nachteile mit der jeweiligen Architektur entstehen. Durchläuft man den Katalog kann wissenschaftlich belegt die präferierte Variante gewählt werden. Eine weitere Möglichkeit, welche aus der Forschung resultiert, ist die Kombination beider Architekturen zu einer Art "Hybrid Kubernetes" Umgebung.
 }
 \schlagworte{Kubernetes, edge-computing, distributed System, Proof-of-Concept}
 
